retail-analytics-project completed

--- a/notebooks/extract_data_bronze_layer.ipynb
+++ b/notebooks/extract_data_bronze_layer.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9248a060-399b-4263-9208-3217d524472a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Extract and load data from Bronze to Silver Layer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -136,6 +152,29 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "9c67124f-6963-476a-afe0-5c2eaf28d223",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# df is your DataFrame\n",
+    "# Replace \"/mnt/delta/fact_sales_table\" with your desired path\n",
+    "df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(f\"netflix_data.netflix_schema.{var_tgt_folder}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "3149cad2-0d72-4ddc-bed4-d4b6f16fc3ec",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -192,6 +231,12 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 7924432288079020,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
    "notebookName": "extract_data_bronze_layer",
