--- a/notebooks/load_data_gold_layer.ipynb
+++ b/notebooks/load_data_gold_layer.ipynb
@@ -3722,6 +3722,40 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "0e74a745-f478-4979-9b94-a58a4ba20484",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-----------------+------------------+------------------+----+\n|   Category|      Subcategory|       AverageCost|         TotalCost|Rank|\n+-----------+-----------------+------------------+------------------+----+\n|Accessories|         Cleaners|              2.97|              2.97|   1|\n|Accessories|          Fenders|              8.22|              8.22|   2|\n|Accessories|Bottles and Cages|              2.99|              8.97|   3|\n|Accessories|            Locks|             10.31|             10.31|   4|\n|Accessories|            Pumps| 9.280000000000001|18.560000000000002|   5|\n|      Bikes|    Touring Bikes| 885.9327272727274|19490.520000000004|   1|\n|      Bikes|   Mountain Bikes| 961.8855263157899|36551.650000000016|   2|\n|      Bikes|       Road Bikes|  881.709692307693| 57311.13000000004|   3|\n|   Clothing|            Socks|              3.38|             13.52|   1|\n|   Clothing|             Caps| 5.953333333333333|             17.86|   2|\n|   Clothing|            Vests|             23.75|             71.25|   3|\n|   Clothing|           Tights|30.929999999999996| 92.78999999999999|   4|\n|   Clothing|           Gloves|11.513333333333334|            103.62|   5|\n| Components|           Chains|              8.99|              8.99|   1|\n| Components|      Derailleurs|            47.275|             94.55|   2|\n| Components|           Brakes|             47.29|             94.58|   3|\n| Components|         Headsets|38.660000000000004|            115.98|   4|\n| Components|  Bottom Brackets| 40.95333333333333|            122.86|   5|\n+-----------+-----------------+------------------+------------------+----+\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "window_spec = Window.partitionBy('Category').orderBy('TotalCost')\n",
+    "\n",
+    "top5 = product_df_aggregated.withColumn(\"Rank\", dense_rank().over(window_spec)).filter(col(\"Rank\") <= 5)\n",
+    "\n",
+    "top5.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "e606a9d3-2e89-49fe-8b03-caf80d1e3151",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -3738,6 +3772,11 @@
     "product_df_aggregated.write.format(\"delta\").mode(\"overwrite\")\\\n",
     "    .option(\"overwriteSchema\", \"true\")\\\n",
     "    .option(\"path\", f\"abfss://gold@azureprojectdatalakegen2.dfs.core.windows.net/ProductAggregated\")\\\n",
+    "    .save()\n",
+    "\n",
+    "top5.write.format(\"delta\").mode(\"overwrite\")\\\n",
+    "    .option(\"overwriteSchema\", \"true\")\\\n",
+    "    .option(\"path\", f\"abfss://gold@azureprojectdatalakegen2.dfs.core.windows.net/Top5\")\\\n",
     "    .save()"
    ]
   },
